app/kubernetes/frontend/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: fowx/cloudproject_frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-service
spec:
  ports:
    - port: 5173
      protocol: TCP
      targetPort: 80 
  selector:
    app: frontend
  type: LoadBalancer

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-mesh
spec:
  hosts:
    - frontend.local
    - 127.0.0.1
  gateways:
    - frontend-gateway
  http:
    - route:
        - destination:
            host: frontend-service
            port:
              number: 5173 

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: frontend-api-policy
  namespace: dev
spec:
  selector:
    matchLabels:
      app: api
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/dev/sa/frontend"]

---

apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: dev
  namespace: dev
spec:
  mtls:
    mode: STRICT
